version 2.2.0 alpha (2014-05-12)
	Add Event().routine() method
	Always set event based on years
	Remove holidays.IGNORE_YEAR
	Fix bug with giving a name to HDate().setMonth()
	Add HDate().candleLighting() and HDate().havdalah()
	Fix spelling of alot_hashachar zman
	Add Month().molad()
	Change names of internal methods to be shorter
	Don't include entire README in package.json (NPM will do it)

version 2.1.2 (2014-04-04 [5 Nisan 5774])
	Fix sourcemap links
	Fix GitHub link in package.json

version 2.1.1 (2014-04-04 [5 Nisan 5774])
	Change default Adar to Adar Sheini
	Add string support to new HDate()
	Fix Yom Ha'atzmaut not showing up until 1951
	Simplify cities
	Change names of Adar I and Adar II to Adar 1/2
	Fix HDate().getGregMonthObject()
	Link sourcemaps to GitHub

version 2.1 (2014-03-16 [Purim 5774])
	Add Hebcal.GregYear and Hebcal.GregMonth constructors
	Fix issue with passing a string day to new HDate(day, month[, year])
	Fix broken Adar 1/2 to new HDate(string)
	Default unspecified Adar to be 1, not 2
	Change behavior of Hebcal.prototype.map to map over individual days
	Add hallel and tachanun to HDate()s
	Add Hebcal.events property
	Setting Hebcal.defaultLocation or Hebcal.defaultCity calls an event
	Add Hebcal().getDay() method
	Fix issue with new Hebcal(-1)
	Make city names case-insensitive
	Add Ashkenazis sedra names
	Fix issue with Shabbat Mevarchim in Elul
	Add Shabbat Mevarchim and Rosh Chodesh to holidays
	Add HDate().onOrBefore()
	Add Hebcal().days() and Hebcal().filter()
	Remove some internal methods from the export
	Have HDate().getMonthObject(), getYearObject(), getGregMonthObject(), getGregYearObject() always return a value, even if unaffiliated
	Move client files to new folder
	Change cities to use lat/long decimals
	Cache results of HDate().getSedra()
	Add HDate().getParsha() alias of getSedra()
	Add Hebcal.parshiot and Hebcal.LANGUAGE
	Add Hebcal().findParsha()
	Export Hebcal.map and Hebcal.filter
	Change default havdalah offset to 42