@@ -132,29 +132,29 @@ function Hebcal(year, month) {
 
 Hebcal[prototype][isLeapYear] = HDate[prototype][isLeapYear];
 
-Hebcal[prototype].setCity = function setCity(city) {
+Hebcal[prototype].setCity = function(city) {
 	this.months.forEach(function(m){
 		m.setCity(city);
 	});
 	return this;
 };
 
-Hebcal[prototype].setLocation = function setLocation(lat, lon) {
+Hebcal[prototype].setLocation = function(lat, lon) {
 	this.months.forEach(function(m){
 		m.setLocation(lat, lon);
 	});
 	return this;
 };
 
-Hebcal[prototype][next] = function next() {
+Hebcal[prototype][next] = function() {
 	return new Hebcal(this.year + 1);
 };
 
-Hebcal[prototype][prev] = function prev() {
+Hebcal[prototype][prev] = function() {
 	return new Hebcal(this.year - 1);
 };
 
-Hebcal[prototype][getMonth] = function getMonth(month) {
+Hebcal[prototype][getMonth] = function(month) {
 	month = c.monthNum(month);
 	if (month > this.months[length]) {
 		return this[next]()[getMonth](month - this.months[length]);
@@ -162,7 +162,7 @@ Hebcal[prototype][getMonth] = function getMonth(month) {
 	return this.months[month > 0 ? month - 1 : this.months[length] + month];
 };
 
-Hebcal[prototype][getDay] = function getDay(day) {
+Hebcal[prototype][getDay] = function(day) {
 	if (day > this[length]) {
 		return null;
 	}
@@ -176,7 +176,7 @@ Hebcal[prototype][getDay] = function getDay(day) {
 	return this[getMonth](TISHREI)[getDay](day - rosh);
 };
 
-Hebcal[prototype].days = function days() {
+Hebcal[prototype].days = function() {
 	return [].concat.apply([], this.months[map](function(m){
 		return m.days;
 	}));
@@ -186,11 +186,11 @@ Hebcal[prototype][map] = function() {
 	return [][map].apply(this.days(), arguments);
 };
 
-Hebcal[prototype].filter = function filter() {
+Hebcal[prototype].filter = function() {
 	return [].filter.apply(this.days(), arguments);
 };
 
-Hebcal[prototype].addHoliday = function addHoliday(holiday) {
+Hebcal[prototype].addHoliday = function(holiday) {
 	if (!(holiday instanceof holidays.Event)) {
 		throw new TE('non-Event passed to addHoliday()');
 	}
@@ -198,7 +198,7 @@ Hebcal[prototype].addHoliday = function addHoliday(holiday) {
 	return this;
 };
 
-Hebcal[prototype].findParsha = function findParsha(parsha, o) {
+Hebcal[prototype].findParsha = function(parsha, o) {
 	var days = this.filter(function(d){
 		return d.getSedra(o).indexOf(parsha) + 1;
 	});
@@ -208,7 +208,7 @@ Hebcal[prototype].findSedra = Hebcal[prototype].findParsha;
 
 Hebcal[prototype][find] = function find_f(day, month) {
 	if (arguments[length] === 1) {
-		if (typeof day === 'string') {
+		if (typeof day == 'string') {
 			return find_f[strings].call(this, day);
 		} else if (Array.isArray(day)) {
 			return [].concat.apply([], day[map](function(d){
@@ -226,9 +226,9 @@ Hebcal[prototype][find] = function find_f(day, month) {
 			return [].concat.apply([], month[map](function(m){
 				return this[find](day, m);
 			}, this));
-		} else if (typeof month === 'string') {
+		} else if (typeof month == 'string') {
 			return this[find](day, c.monthNum(month));
-		} else if (typeof month === 'number') {
+		} else if (typeof month == 'number') {
 			return this[find](day, this[getMonth](month));
 		}
 	}
@@ -247,38 +247,38 @@ Hebcal[prototype][find][strings] = function strings(str) {
 		return split[length] - 1 ? this[find].apply(this, split) : [];
 	}
 };
-Hebcal[prototype][find][strings].rosh_chodesh = function rosh_chodesh() {
+Hebcal[prototype][find][strings].rosh_chodesh = function() {
 	return this[find]('Rosh Chodesh', c.range(1, this.months[length]));
 };
-Hebcal[prototype][find][strings].holidays = function holidays() {
+Hebcal[prototype][find][strings].holidays = function() {
 	return [].concat.apply([], this.holidays[map](function(h){
 		return this[find](h.date);
 	}, this));
 };
-Hebcal[prototype][find][strings].omer = function omer() {
+Hebcal[prototype][find][strings].omer = function() {
 	return this[find](c.range(15+1, 15+49), NISAN);
 };
-Hebcal[prototype][find][strings].today = function today() {
+Hebcal[prototype][find][strings].today = function() {
 	return this[find](new HDate());
 };
-Hebcal[prototype][find][strings].yesterday = function yesterday() {
+Hebcal[prototype][find][strings].yesterday = function() {
 	return [this[find]('today')[0][prev]()];
 };
-Hebcal[prototype][find][strings].tomorrow = function tomorrow() {
+Hebcal[prototype][find][strings].tomorrow = function() {
 	return [this[find]('today')[0][next]()];
 };
-Hebcal[prototype][find][strings].pesach = function pesach() {
+Hebcal[prototype][find][strings].pesach = function() {
 	return this[find](c.range(15, 15+8-this.il), NISAN);
 };
-Hebcal[prototype][find][strings].sukkot = function sukkot() {
+Hebcal[prototype][find][strings].sukkot = function() {
 	return this[find](c.range(15, 15+9-this.il), TISHREI);
 };
 Hebcal[prototype][find][strings].succot = Hebcal[prototype][find][strings].succos = Hebcal[prototype][find][strings].sukkos = Hebcal[prototype][find][strings].sukkot;
-Hebcal[prototype][find][strings].shavuot = function shavuot() {
+Hebcal[prototype][find][strings].shavuot = function() {
 	return this[find](c.range(6, 7-this.il), months.SIVAN);
 };
 Hebcal[prototype][find][strings].shavuos = Hebcal[prototype][find][strings].shavuot;
-Hebcal[prototype][find][strings].rosh_hashana = function rosh_hashana() {
+Hebcal[prototype][find][strings].rosh_hashana = function() {
 	return this[find](c.range(1, 2), TISHREI);
 };
 Hebcal[prototype][find][strings].rosh_hashanah = Hebcal[prototype][find][strings].rosh_hashana;
@@ -329,7 +329,7 @@ defProp(Hebcal, 'havdalah', getset(function(){
 
 // Months
 
-Hebcal[Month] = function Month(month, year) {
+Hebcal[Month] = function(month, year) {
 	month = c.monthNum(month);
 	if (typeof month != 'number') {
 		throw new TE('month to Hebcal.Month is not a valid type');
@@ -412,27 +412,27 @@ Hebcal[Month][prototype][getDay] = function(day) {
 	return this.days[day > 0 ? day - 1 : this.days[length] + day];
 };
 
-Hebcal[Month][prototype][getYearObject] = function getYearObject() {
+Hebcal[Month][prototype][getYearObject] = function() {
 	return this.__year || new Hebcal(this.year);
 };
 
-Hebcal[Month][prototype].getName = function getName(o) {
+Hebcal[Month][prototype].getName = function(o) {
 	return c.LANG(c.monthNames[+this[isLeapYear]()][this.month], o);
 };
 
-Hebcal[Month][prototype].rosh_chodesh = function rosh_chodesh() {
+Hebcal[Month][prototype].rosh_chodesh = function() {
 	var prevMonth = this[prev]();
 	return prevMonth[length] === 30 ? [prevMonth[getDay](-1), this[getDay](1)] : [this[getDay](1)];
 };
 
-Hebcal[Month][prototype].setCity = function setCity(city) {
+Hebcal[Month][prototype].setCity = function(city) {
 	this.days.forEach(function(d){
 		d.setCity(city);
 	});
 	return this;
 };
 
-Hebcal[Month][prototype].setLocation = function setLocation(lat, lon) {
+Hebcal[Month][prototype].setLocation = function(lat, lon) {
 	this.days.forEach(function(d){
 		d.setLocation(lat, lon);
 	});
@@ -507,10 +507,10 @@ Hebcal[Month][prototype][find][strings] = function strings(str) {
 		return num ? this[find](num) : [];
 	}
 };
-Hebcal[Month][prototype][find][strings].rosh_chodesh = function rosh_chodesh() {
+Hebcal[Month][prototype][find][strings].rosh_chodesh = function() {
 	return this.rosh_chodesh();
 };
-Hebcal[Month][prototype][find][strings].shabbat_mevarchim = function shabbat_mevarchim() {
+Hebcal[Month][prototype][find][strings].shabbat_mevarchim = function() {
 	return this.month === months.ELUL ? [] : // No birchat hachodesh in Elul
 		this[find](this[getDay](29).onOrBefore(c.days.SAT));
 };
@@ -520,7 +520,7 @@ Hebcal[Month][prototype][find][strings].shabbos_mevarchim = Hebcal[Month][protot
 
 Hebcal.HDate = HDate;
 
-HDate[prototype].getMonthObject = function getMonthObject() {
+HDate[prototype].getMonthObject = function() {
 	return this.__month || new Hebcal[Month](this[getMonth](), this[getFullYear]());
 };
 
@@ -581,7 +581,7 @@ HDate[prototype].holidays = function(all) {
 	};
 });
 
-HDate[prototype].omer = function omer() {
+HDate[prototype].omer = function() {
 	if (this.greg().getTime() > new HDate(15, NISAN, this[getFullYear]()).greg().getTime() &&
 		this.greg().getTime() < new HDate( 6, months.SIVAN, this[getFullYear]()).greg().getTime()) {
 		return this.abs() - new HDate(16, NISAN, this[getFullYear]()).abs() + 1;
@@ -589,7 +589,7 @@ HDate[prototype].omer = function omer() {
 	return 0;
 };
 
-HDate[prototype].dafyomi = function daf(o) {
+HDate[prototype].dafyomi = function(o) {
 	return dafyomi.dafname(dafyomi.dafyomi(this.greg()), o);
 };
 
@@ -747,7 +747,7 @@ HDate[prototype].hallel = (function() {
 
 // Gregorian years
 
-Hebcal[GregYear] = function GregYearConstructor(year, month) {
+Hebcal[GregYear] = function GregYear(year, month) {
 	if (!year) {
 		year = (new Date)[getFullYear]();
 	}
@@ -755,7 +755,7 @@ Hebcal[GregYear] = function GregYearConstructor(year, month) {
 		var d = new Date(year);
 		month = year.indexOf(' ') + 1 || year.indexOf('-') + 1 || year.indexOf('/') + 1 ? d[getMonth]() + 1 : c.range(1, 12);
 		// Check if a month was passed in the string. Can't just check for default January, because a real January might have been passed.
-		return new Hebcal[GregYear](d[getFullYear](), month);
+		return new GregYear(d[getFullYear](), month);
 	}
 	if (typeof year !== 'number') {
 		throw new TE('year to Hebcal.GregYear() is not a number');
@@ -784,7 +784,7 @@ Hebcal[GregYear] = function GregYearConstructor(year, month) {
 			throw new TE('month to Hebcal.GregYear() is not a valid type');
 		}
 	} else {
-		return new Hebcal[GregYear](year, c.range(1, 12));
+		return new GregYear(year, c.range(1, 12));
 	}
 
 	this.hebyears = [].concat.apply([], this.months[map](function(m){
@@ -836,22 +836,22 @@ Hebcal[GregYear] = function GregYearConstructor(year, month) {
 	return this;
 };
 
-Hebcal[GregYear][prototype][isLeapYear] = function isLeapYear() {
+Hebcal[GregYear][prototype][isLeapYear] = function() {
 	return this[length] === 366;
 };
 
 Hebcal[GregYear][prototype].setCity = Hebcal[prototype].setCity;
 Hebcal[GregYear][prototype].setLocation = Hebcal[prototype].setLocation;
 
-Hebcal[GregYear][prototype][next] = function next() {
+Hebcal[GregYear][prototype][next] = function() {
 	return new Hebcal[GregYear](this.year + 1);
 };
 
-Hebcal[GregYear][prototype][prev] = function prev() {
+Hebcal[GregYear][prototype][prev] = function() {
 	return new Hebcal[GregYear](this.year - 1);
 };
 
-Hebcal[GregYear][prototype][getMonth] = function getMonth(month) {
+Hebcal[GregYear][prototype][getMonth] = function(month) {
 	month = typeof month === 'number' ? month : greg.lookupMonthNum(month);
 	if (month > this.months[length]) {
 		return this[next]()[getMonth](month - this.months[length]);
@@ -865,7 +865,7 @@ Hebcal[GregYear][prototype].filter = Hebcal[prototype].filter;
 
 Hebcal[GregYear][prototype].addHoliday = Hebcal[prototype].addHoliday;
 
-Hebcal[GregMonth] = function GregMonth(month, year) {
+Hebcal[GregMonth] = function(month, year) {
 	if (typeof month == 'string') {
 		month = greg.lookupMonthNum(month);
 	}
@@ -924,11 +924,11 @@ Hebcal[GregMonth] = function GregMonth(month, year) {
 	return this;
 };
 
-Hebcal[GregMonth][prototype][isLeapYear] = function isLeapYear() {
+Hebcal[GregMonth][prototype][isLeapYear] = function() {
 	return greg.LEAP(this.year);
 };
 
-Hebcal[GregMonth][prototype][prev] = function prev() {
+Hebcal[GregMonth][prototype][prev] = function() {
 	if (this.month === 1) {
 		return this[getYearObject]()[prev]()[getMonth](-1);
 	} else {
@@ -936,22 +936,22 @@ Hebcal[GregMonth][prototype][prev] = function prev() {
 	}
 };
 
-Hebcal[GregMonth][prototype][next] = function next() {
+Hebcal[GregMonth][prototype][next] = function() {
 	return this[getYearObject]()[getMonth](this.month + 1);
 };
 
-Hebcal[GregMonth][prototype][getDay] = function getDay(day) {
+Hebcal[GregMonth][prototype][getDay] = function(day) {
 	if (day > this.days[length]) {
 		return this[next]()[getDay](day - this.days[length]);
 	}
 	return this.days[day > 0 ? day - 1 : this.days[length] + day];
 };
 
-Hebcal[GregMonth][prototype][getYearObject] = function getYearObject() {
+Hebcal[GregMonth][prototype][getYearObject] = function() {
 	return this.__year || new Hebcal[GregYear](this.year);
 };
 
-Hebcal[GregMonth][prototype].getName = function getName() {
+Hebcal[GregMonth][prototype].getName = function() {
 	return greg.monthNames[this.month];
 };
 
@@ -960,11 +960,11 @@ Hebcal[GregMonth][prototype].setLocation = Hebcal[Month][prototype].setLocation;
 
 Hebcal[GregMonth][prototype][map] = Hebcal[Month][prototype][map];
 
-HDate[prototype].getGregMonthObject = function getGregMonthObject() {
+HDate[prototype].getGregMonthObject = function() {
 	return this.__gregmonth || new Hebcal[GregMonth](this.greg()[getMonth]() + 1, this.greg()[getFullYear]());
 };
 
-HDate[prototype].getGregYearObject = function getGregYearObject() {
+HDate[prototype].getGregYearObject = function() {
 	return this.getGregMonthObject()[getYearObject]();
 };
 
